@@ -30,7 +30,7 @@
 #include "regint.h"
 
 
-#define emacsmule_islead(c)    ((UChar )((c) - 0x81) > 0x9d - 0x81)
+#define emacsmule_islead(c)    ((UChar )(c) < 0x9e)
 
 /*
     CHARACTER := ASCII_CHAR | MULTIBYTE_CHAR
